--- a/css/andrew.css
+++ b/css/andrew.css
@@ -6,11 +6,11 @@
 body {
     color:#000;
     background:#a7a09a;
+	font-family: Courier New;
+	font-size: 16;
 }
-
 h1 {
     margin:0;
-    font-family: Courier New;
 }
 h2 {
     margin: auto;
@@ -18,18 +18,24 @@ h2 {
     text-align: center;
 }
 h3 {
-    margin: auto;
-    text-align: left;
+    margin-top: 10px;
+    text-align: center;
 }
-
+#icon-med {
+    font-size: 24px;
+}
 #portrait {
     width: 75%;
     height: 30%;
 }
+.active {
+    background-color: grey;
+}
 
+
+/* BODY WRAPPER */
 #wrap {
     background:#1a2f2a;
-    font-family: Courier New;
     text-align: center;
 }
 
@@ -38,68 +44,8 @@ h3 {
     background:#ddd;
 }
 
-/* NAV ID */
-#nav {
-    padding:0.5% 1%;
-    background:black;
-    position: relative;
-}
-#nav ul {
-    margin:0;
-    padding:0;
-    list-style:none;
-    font-weight: bold;
-}
-#nav li {
-    display:inline;
-    margin:0;
-    padding:0;
-}
 
-
-#left-sidebar {
-    float:left;
-    width:15%;
-    padding:10px;
-    border-radius: 25px;
-    background:white;
-    position: relative;
-    left: 4%;
-}
-
-#main {
-    float:left;
-    width:50%;
-    padding:1%;
-    background:#CCCCCC;
-    border-radius: 25px;
-    position: relative;
-    left: 7%;
-}
-
-#right-sidebar {
-    float:right;
-    width:15%;
-    padding:1%;
-    border-radius: 25px;
-    background-color:white;
-    position: relative;
-    right: 4%;
-    text-align: left;
-}
-
-#footer {
-    clear:both;
-    padding:0.5% 1%;
-    background:#FFFF00;
-    width: 100%;
-}
-
-#icon-med {
-    font-size: 24px;
-}
-
-/* TOPNAV CLASS */
+/* TOP NAVIGATION BAR CLASS */
 div.topnav {
     list-style-type: none;
     margin: 0;
@@ -119,14 +65,23 @@ div.topnav li a {
 div.topnav li a:hover {
     background-color: #555;
 }
-#sidebar li a:hover {
-    background-color: white;
+/* NAVIGATION BAR */
+#nav {
+    padding:0.5% 1%;
+    background:black;
+    position: relative;
 }
-
-.active {
-    background-color: grey;
+#nav ul {
+    margin:0;
+    padding:0;
+    list-style:none;
+    font-weight: bold;
 }
-
+#nav li {
+    display:inline;
+    margin:0;
+    padding:0;
+}
 
 
 /* DROPDOWN CLASS */
@@ -165,6 +120,98 @@ li.dropdown {
 
 #submenu {
     z-index: 999;
+}
+
+
+/* LEFT SIDEBAR */
+#wrap-left {
+	margin-top: 2%;
+    float:left;
+    width:18%;
+    left: 3%;
+    border-radius: 25px;
+    background:#ddd;
+	text-align:left;
+	overflow: scroll;
+	font-size: 12;
+    position: relative;
+}
+
+#top-left-sidebar {
+}
+
+#bottom-left-sidebar {
+}
+
+#top-left-sidebar p {
+	text-align: center;
+}
+
+
+/* CENTER MAIN */
+#main {
+    float:left;
+	height: 720px;
+    width:50%;
+    padding:1%;
+    background:#CCCCCC;
+    border-radius: 25px;
+	overflow: scroll;
+    position: relative;
+    left: 7%;
+}
+
+
+/* RIGHT SIDEBAR */
+#wrap-right {
+	margin-top: 2%;
+    float:right;
+    width:15%;
+	right: 3%;
+    padding:1%;
+    border-radius: 25px;
+    background-color:#ddd;
+    text-align: center;
+	overflow: scroll;
+	font-size: 12;
+	position: relative;
+}
+
+#top-right-sidebar {
+}
+
+#bottom-right-sidebar {
+}
+
+#top-right-sidebar p:hover {
+    background-color: white;
+}
+
+
+/* FOOTER */
+#footer {
+    clear:both;
+    padding:0.5% 1%;
+    background:#FFFF00;
+    width: 100%;
+}
+
+
+/* SCREEN SIZING CLASS */
+@media (min-width:992px) {
+    .desktop-only {
+        display:block !important;
+    }
+}
+ 
+@media (max-width: 991px) {
+    .mobile-only {
+        display:block !important;
+    }
+ 
+    .desktop-only {
+        display:none !important;
+    }
 }
 
 </style>
