--- a/css/andrew.css
+++ b/css/andrew.css
@@ -1,26 +1,24 @@
 <style type="text/css" media="screen, print, projection">
 
+#WELCOME {}
 #CME_TRADE {}
 #DARBO {}
 
 body {
-    color:#000;
-    background:#a7a09a;
-	font-family: Courier New;
-	font-size: 16;
+    font-family: Courier New;
+    font-size: 16;
+    color: black;
+    font-weight: bold;
 }
-h1 {
-    margin:0;
+h1, h2, h3 {
+    text-align: left;
+    margin: auto;
 }
 h2 {
-    margin: auto;
     font-size: 20px;
     text-align: center;
 }
-h3 {
-    margin-top: 10px;
-    text-align: center;
-}
+
 #icon-med {
     font-size: 24px;
 }
@@ -31,28 +29,40 @@ h3 {
 .active {
     background-color: grey;
 }
-
-
-/* BODY WRAPPER */
-#wrap {
-    background:#1a2f2a;
-    text-align: center;
+p a {
+    color: #0000ff;
+}
+p a:hover {
+    background-color: white;
 }
 
+/* HEADER */
 #header {
     padding:0.5% 1%;
     background:#ddd;
 }
-
-
-/* TOP NAVIGATION BAR CLASS */
-div.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+#header h1 a {
+    color: black;
 }
 
-div.topnav li a {
+
+/* BODY WRAPPER */
+.wrap {
+    background: -webkit-linear-gradient(grey, #cbd4f6);
+    background: -moz-linear-gradient(grey, #cbd4f6);
+    text-align: center;
+}
+
+
+/* TOP NAVIGATION BAR */
+.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding:0.5% 1%;
+    background:black;
+    position: relative;
+}
+.topnav li a {
     display: inline-block;
     color: white;
     text-align: center;
@@ -61,39 +71,27 @@ div.topnav li a {
     transition: 0.3s;
     font-size: 20px;
 }
-
-div.topnav li a:hover {
+.topnav li a:hover {
     background-color: #555;
 }
-/* NAVIGATION BAR */
-#nav {
-    padding:0.5% 1%;
-    background:black;
-    position: relative;
-}
-#nav ul {
+.topnav ul {
     margin:0;
     padding:0;
     list-style:none;
     font-weight: bold;
 }
-#nav li {
+.topnav li {
     display:inline;
-    margin:0;
-    padding:0;
 }
-
 
 /* DROPDOWN CLASS */
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
-
 li.dropdown {
     position: relative;
     display: inline-block;
 }
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -103,88 +101,88 @@ li.dropdown {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     text-align: center;
 }
-
 .dropdown-content a {
     color: black;
     text-decoration: none;
     display: block;
     text-align: center;
 }
-
 .dropdown-content a:hover {
-    background-color: #f1f1f1}
-
+    background-color: #f1f1f1
+}
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
 #submenu {
-    z-index: 999;
+    z-index: 1;
 }
 
 
 /* LEFT SIDEBAR */
 #wrap-left {
-	margin-top: 2%;
-    float:left;
+    margin-top: 2%;
+    float: left;
+    width: 18%;
+    height: 70%;
+    margin-left: 3%;
+    text-align: left;
+    overflow: hidden;
+    font-size: 12;
+}
+.top-left-sidebar {
+    text-align: center;
+    position: absolute;
     width:18%;
-    left: 3%;
     border-radius: 25px;
-    background:#ddd;
-	text-align:left;
-	overflow: scroll;
-	font-size: 12;
-    position: relative;
+    background-color: rgba(#ddd, 0.5);
+    border-style: outset;
+    border-width: 5px;
 }
-
-#top-left-sidebar {
-}
-
-#bottom-left-sidebar {
-}
-
-#top-left-sidebar p {
-	text-align: center;
-}
-
 
 /* CENTER MAIN */
 #main {
     float:left;
-	height: 720px;
+    height: 720px;
     width:50%;
     padding:1%;
-    background:#CCCCCC;
+    background-color: rgba(#CCCCCC, 0.5);
     border-radius: 25px;
-	overflow: scroll;
+    overflow: hidden;
     position: relative;
-    left: 7%;
+    left: 3%;
 }
 
 
 /* RIGHT SIDEBAR */
-#wrap-right {
-	margin-top: 2%;
+#wrap-top-right {
+    margin-top: 2%;
     float:right;
     width:15%;
-	right: 3%;
+    right: 3%;
     padding:1%;
     border-radius: 25px;
-    background-color:#ddd;
+    background-color: rgba(#ddd, .5);
     text-align: center;
-	overflow: scroll;
-	font-size: 12;
-	position: relative;
+    overflow: hidden;
+    font-size: 12;
+    position: relative;
+    border-style: outset;
+    border-width: 5px;
 }
 
-#top-right-sidebar {
-}
-
-#bottom-right-sidebar {
-}
-
-#top-right-sidebar p:hover {
-    background-color: white;
+#wrap-bottom-right {
+    margin-top: 3%;
+    margin-bottom: 2%;
+    float:right;
+    width:21%;
+    padding:1%;
+    border-radius: 25px;
+    background-color: rgba(#ddd, 0.5);
+    text-align: center;
+    overflow: hidden;
+    font-size: 12;
+    position: relative;
+    margin-right: 1%;
 }
 
 
@@ -207,6 +205,11 @@ li.dropdown {
 @media (max-width: 991px) {
     .mobile-only {
         display:block !important;
+    }
+    
+    .resize-mobile {
+        width: 90% !important;
+        float: none !important;
     }
  
     .desktop-only {
